--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=5000
 
-MONGO_URI=mongodb+srv://usama:compact123@nodeexpressprojects.l9ree0m.mongodb.net/Progressive_Group_International
+MONGO_URI=mongodb+srv://sshahzebhaider:Shah1234@cluster0.akm390h.mongodb.net/
 JWT_SECRET=abc123
