--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=5000
 
-MONGO_URI=mongodb+srv://sshahzebhaider:Shah1234@cluster0.akm390h.mongodb.net/
+MONGO_URI=mongodb+srv://sshahzebhaider:Shah1234@cluster0.akm390h.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=abc123
